<resources>
    <string name="app_name">CafeterITA</string>
    <string name="editText_email">Email</string>
    <string name="editText_password">Contraseña</string>
    <string name="btnlogin">Iniciar Sesión</string>
    <string name="btnregister">Registrarse</string>
    <string name="imageView">Logo SplashScreen</string>
    <string name="textViewMenu">Estos son los tipos de productos que te ofrecemos:</string>
    <string name="textViewBienvenida">Bienvenido a nuestro Menú</string>
    <string name="botonMenu">Ver productos</string>
    <string name="textviewAyuda">Aquí podrás encontrar nuestro perfil de Facebook para no perderte de novedades así como mandar dudas con respecto al uso de la aplicación</string>
    <string name="textviewNomPro">Nombre Producto</string>
    <string name="textviewPrePro">Precio Producto</string>
    <string name="botonnotas">Guardar</string>
    <string name="Edittext_bitacora">Escribir Productos a comprar</string>
    <string name="botonmas">+</string>
    <string name="botonatras">Atras</string>
    <string name="textviewnotas">¡ Fabrica tu lista antes de comprar !</string>
    <string name="txt_agenda">¡ Agenda que dias venden tu comida Favorita !</string>
    <string name="txt_dia">Dia de la semana</string>
    <string name="txt_datos">Comida de el dia</string>
    <string name="botonagenda1">Guardar</string>
    <string name="botonagenda2">Buscar</string>
    <string name="txt_categoria">Categoría del producto</string>
    <string name="txt_code">Codigo del producto</string>
    <string name="txt_nameProd">Nombre del producto</string>
    <string name="txt_price">Precio del producto</string>
    <string name="BotonRegistrar">Registrar producto</string>
    <string name="BotonBuscar">Buscar producto</string>
    <string name="BotonEliminar">Eliminar producto</string>
    <string name="BotonModificar">Modificar Producto</string>
    <string name="txt_nombre">Nombre de la lista</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_consultar">Consultar</string>
    <string name="item1">Listas</string>
    <string name="item2">Manejar Productos</string>


</resources>