<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basededatos">

    <EditText
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/txt_categoria"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_nameProd"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <Button
        android:id="@+id/button9"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:onClick="Modificar"
        android:text="@string/BotonModificar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="242dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:onClick="Eliminar"
        android:text="@string/BotonEliminar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button7"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:onClick="Registrar"
        android:text="@string/BotonRegistrar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceprod" />

    <Button
        android:id="@+id/button8"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:onClick="Buscar"
        android:text="@string/BotonBuscar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/txt_code"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoria" />

    <EditText
        android:id="@+id/priceprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/txt_price"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameProd" />

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#99FFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnhome"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botonhome"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:src="@mipmap/home2" />

        <ImageButton
            android:id="@+id/btncomida"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botoncomida"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:src="@mipmap/comida3" />

        <ImageButton
            android:id="@+id/btnfila"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botonfila"
            android:scaleType="centerInside"
            android:src="@mipmap/fila3" />

        <ImageButton
            android:id="@+id/btnopciones"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botonopciones"
            android:scaleType="centerInside"
            android:src="@mipmap/hamburguesa" />

        <ImageButton
            android:id="@+id/btnagenda"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botondeagenda"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/agen" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>