<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textViewBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/textViewBienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="144dp"
        android:text="@string/textViewMenu"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@id/textViewBienvenida"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="249dp"
        android:layout_height="79dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMenu" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"

        android:onClick="Reenviar"
        android:text="@string/botonMenu"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:backgroundTint="#99FFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#99FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnhome"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botonhome"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:src="@mipmap/home2" />

        <ImageButton
            android:id="@+id/btncomida"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botoncomida"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:src="@mipmap/comida3" />

        <ImageButton
            android:id="@+id/btnfila"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botonfila"
            android:scaleType="centerInside"
            android:src="@mipmap/fila3" />

        <ImageButton
            android:id="@+id/btnopciones"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="botonopciones"
            android:scaleType="centerInside"
            android:src="@mipmap/hamburguesa" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="Total"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ListView
        android:id="@+id/txtproductosagregados"
        android:layout_width="327dp"
        android:layout_height="157dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>